src/App.css
.board {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  background-color: wheat;
  padding: 5px;
  margin: 5px;
  border-color: black;
  border-style: solid;
  border-width: 1px;
  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.5);
}

.containerCasellaMain {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 5px;
}

.containerCasellaColoreNumero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.containerCasellaNumero {
  display: flex;
  flex-direction: row;
}

.casella {
  position: relative;
  display: flex;
  width: 110px;
  height: 110px;
  font-size: 80px;
  text-align: center;
  justify-content: center;
  align-items: center;
}

.miniNumero {
  width: 15px;
  height: 15px;
  font-size: 13px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid black;
  background-color: orange;
}

.miniColore {
  width: 15px;
  height: 15px;
  border-right: 1px solid black;
}

.containerMiniNumeri {
  display: flex;
  flex-direction: column;
}

.containerMiniColori {
  display: flex;
  justify-content: center;
  flex-direction: row;
}
.boardAndTavolozza {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.unselectable {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.schemaContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 20px;
}

.rowContainer {
  display: flex;
  flex-direction: row;
  margin: 1px;
  padding: 1px;
  justify-content: space-between;
}

table,
.containerPunteggi,
.containerHeader,
.tavolozza {
  background-color: wheat;
  border: 1px solid black;
  padding: 5px;
  margin: 5px;
  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.5);
}
.containerHeader {
  display: flex;
  flex-direction: column;
}

th,
td {
  border-bottom: 1px solid black;
}

.tavolozza {
  display: flex;
  flex-direction: row;
}

.containerTavolozza {
  display: flex;
  flex-direction: row;
}

.coloreTavolozza {
  width: 50px;
  height: 50px;
  margin: 2px;
}

.containerSelected {
  width: 15px;
  height: 15px;
}

.positionCasella {
  position: absolute;
  top: 0;
  left: 0;
  font-size: 25px;
  color: rgba(0, 0, 0, 0.5);
}

.positionSelected {
  position: absolute;
  bottom: 0;
  right: 0;
  border-left: 55px solid transparent;
}

.boardAndTavolozza {
  display: flex;
  flex-direction: column;
  align-items: center;
}

